$Analytics script added

--- a/overrides/partials/integrations/analytics/custom.html
+++ b/overrides/partials/integrations/analytics/custom.html
@@ -7,3 +7,13 @@
     })(window,document,'script','dataLayer','GTM-WKB9V3MQ');</script>
     <!-- End Google Tag Manager -->
 </script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H002J0FM6Y"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-H002J0FM6Y');
+</script>
